# crane-tonic-minimal

./: flake.nix
.github/workflows/: build.yml
crates/example/: Cargo.toml  build.rs
crates/example/proto/: example.proto
crates/example/src/: main.rs
