[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.8.0", features = ["transport", "codegen"] }
prost = "0.11.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.8.0"
